--- a/dev/LoneWolf/res/raw/css_section.css
+++ b/dev/LoneWolf/res/raw/css_section.css
@@ -11,7 +11,7 @@ figure {
     padding: 0px;
 }
 img {
-    max-width: 100%;
+    max-width: 100%; /* TODO: fail on Android 2.X */
     height: auto;
     display: block;
     margin-left: auto;
