--- a/dev/LoneWolf/res/layout/browser.xml
+++ b/dev/LoneWolf/res/layout/browser.xml
@@ -3,10 +3,9 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent">
-    <Button
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="Play"
-            android:onClick="play" />
+    <WebView
+            android:id="@+id/browser"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
 </LinearLayout>
 
