--- a/dev/LoneWolf/res/menu/section_meny.xml
+++ b/dev/LoneWolf/res/menu/section_meny.xml
@@ -27,5 +27,10 @@
               android:title="@string/menu_debug_leet_wolf"
               android:onClick="debugLeetWolf"
               android:showAsAction="never"/>
+        <item android:id="@+id/menu_debug_log"
+              android:icon="@drawable/ic_menu_debug_log"
+              android:title="@string/menu_debug_log"
+              android:onClick="debugLog"
+              android:showAsAction="never"/>
     </group>
 </menu>
