--- a/dev/LoneWolf/res/layout/main.xml
+++ b/dev/LoneWolf/res/layout/main.xml
@@ -6,7 +6,12 @@
     <Button
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="Play"
-            android:onClick="play" />
+            android:text="New Game"
+            android:onClick="newGame" />
+    <Button
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="Load Game"
+            android:onClick="loadGame" />
 </LinearLayout>
 
