--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/MainPage.xaml
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/MainPage.xaml
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+						 xmlns:local="clr-namespace:LoneWolf.ViewModels;assembly=LoneWolf"
              x:Class="LoneWolf.Views.MainPage">
-	<Label Text="Welcome to Xamarin Forms with XAML!" VerticalOptions="Center" HorizontalOptions="Center" />
+	<ContentPage.BindingContext>
+		<local:MainViewModel />
+	</ContentPage.BindingContext>
+	<ListView x:Name="Books" ItemsSource="{Binding Books}">
+		<ListView.ItemTemplate>
+			<DataTemplate>
+				<TextCell Text="{Binding Name}" />
+			</DataTemplate>
+		</ListView.ItemTemplate>
+	</ListView>
 </ContentPage>
