Added Body to Choice

--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/SectionView.cshtml
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/SectionView.cshtml
@@ -9,7 +9,7 @@
 	@Model.Body
 	@foreach(var choice in Model.Choices)
 	{
-		<p>Turn to <a href="hybrid:section/@choice.Number">@choice.Number</a></p>
+		@choice.Body
 	}
 </body>
 </html>
