--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/SectionView.cshtml
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/SectionView.cshtml
@@ -15,9 +15,9 @@
 		}
 		else
 		{
-			<p style="text-decoration: line-through; color: gray; pointer-events: none; cursor: default;">
-				Disabled: @choice.Body
-			</p>
+			<div class="disabled">
+				@choice.Body
+			</div>
 		}
 	}
 </body>
