--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/PrologueView.cshtml
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/PrologueView.cshtml
@@ -9,7 +9,7 @@
 	@Model.Body
 	<div class="navigation">
 		<a href="hybrid:prologue/@Model.Back" id="back" class="@Model.Back.GetCssClass()">Back</a>
-		<a href="hybrid:prologue/@Model.Forward" id="forward" class="@Model.Back.GetCssClass()">Forward</a>
+		<a href="hybrid:prologue/@Model.Forward" id="forward" class="@Model.Forward.GetCssClass()">Forward</a>
 	</div>
 </body>
 </html>
