--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.iOS/Resources/style.css
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.iOS/Resources/style.css
@@ -2,6 +2,13 @@
 	background-color: cornsilk;
 }
 
+a.disabled {
+	text-decoration: line-through;
+	color: gray;
+	pointer-events: none;
+	cursor: default;
+}
+
 .navigation .disabled {
 	text-decoration: line-through;
 	color: gray;
