Updated KaiDisciplines Prologue

--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.iOS/Resources/style.css
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf.iOS/Resources/style.css
@@ -9,6 +9,11 @@ a.disabled {
 	cursor: default;
 }
 
+a.selected {
+	text-decoration: underline;
+	color: green;
+}
+
 .navigation .disabled {
 	text-decoration: line-through;
 	color: gray;
