--- a/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/PrologueView.cshtml
+++ b/dev/xamarin/LoneWolf/LoneWolf/LoneWolf/Views/PrologueView.cshtml
@@ -1,9 +1,13 @@
 ﻿@using LoneWolf.Models
 @using LoneWolf.Views
 @model Prologue
+<!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="style.css" />
+	<meta charset="UTF-8">
+	<title>LoneWolf - @Model.Id</title>
+	<link rel="stylesheet" href="prologue.css"/>
+	<script src="prologue.js"></script>
 </head>
 <body>
 	@Model.Body
